# sol2ADIOS2

./: README.md  ge-hpmusic-fides.json
solconverter/: CMakeLists.txt  solconverter.cpp
solread/: CMakeLists.txt  solread-adios.cpp  solread-hdf5.cpp
src/: CMakeLists.txt  cgns2adios.cpp  runconf
